Pushing the docs for revision for branch: development, commit dce32466b965f2a0475b6442b865dfe461be3d04, folder: dev

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -1117,6 +1117,8 @@
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.update_from_json">update_from_json() (smac.runhistory.runhistory.RunHistory method)</a>
 </li>
+      <li><a href="apidoc/smac.tae.execute_func.html#smac.tae.execute_func.AbstractTAFunc.use_pynisher">use_pynisher (smac.tae.execute_func.AbstractTAFunc attribute)</a>
+</li>
   </ul></td>
 </tr></table>
 
