--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -394,10 +394,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.RunHistory.data">data (smac.runhistory.runhistory.RunHistory attribute)</a>
 </li>
-      <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.EnumEncoder.default">default() (smac.runhistory.runhistory.EnumEncoder method)</a>
+      <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.DataOrigin">DataOrigin (class in smac.runhistory.runhistory)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.EnumEncoder.default">default() (smac.runhistory.runhistory.EnumEncoder method)</a>
+</li>
       <li><a href="apidoc/smac.initial_design.default_configuration_design.html#smac.initial_design.default_configuration_design.DefaultConfiguration">DefaultConfiguration (class in smac.initial_design.default_configuration_design)</a>
 </li>
       <li><a href="apidoc/smac.utils.duplicate_filter_logging.html#smac.utils.duplicate_filter_logging.DuplicateFilter">DuplicateFilter (class in smac.utils.duplicate_filter_logging)</a>
@@ -418,10 +420,10 @@
 </li>
       <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.EnumEncoder">EnumEncoder (class in smac.runhistory.runhistory)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.epm.uncorrelated_mo_rf_with_instances.html#smac.epm.uncorrelated_mo_rf_with_instances.UncorrelatedMultiObjectiveRandomForestWithInstances.estimators">estimators (smac.epm.uncorrelated_mo_rf_with_instances.UncorrelatedMultiObjectiveRandomForestWithInstances attribute)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.tae.execute_func.html#smac.tae.execute_func.ExecuteTAFuncArray">ExecuteTAFuncArray (class in smac.tae.execute_func)</a>
 </li>
       <li><a href="apidoc/smac.tae.execute_func.html#smac.tae.execute_func.ExecuteTAFuncDict">ExecuteTAFuncDict (class in smac.tae.execute_func)</a>
@@ -431,6 +433,10 @@
       <li><a href="apidoc/smac.tae.execute_ta_run_aclib.html#smac.tae.execute_ta_run_aclib.ExecuteTARunAClib">ExecuteTARunAClib (class in smac.tae.execute_ta_run_aclib)</a>
 </li>
       <li><a href="apidoc/smac.tae.execute_ta_run_old.html#smac.tae.execute_ta_run_old.ExecuteTARunOld">ExecuteTARunOld (class in smac.tae.execute_ta_run_old)</a>
+</li>
+      <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.DataOrigin.EXTERNAL_DIFFERENT_INSTANCES">EXTERNAL_DIFFERENT_INSTANCES (smac.runhistory.runhistory.DataOrigin attribute)</a>
+</li>
+      <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.DataOrigin.EXTERNAL_SAME_INSTANCES">EXTERNAL_SAME_INSTANCES (smac.runhistory.runhistory.DataOrigin attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -573,6 +579,8 @@
 </li>
       </ul></li>
       <li><a href="apidoc/smac.intensification.intensification.html#smac.intensification.intensification.Intensifier.intensify">intensify() (smac.intensification.intensification.Intensifier method)</a>
+</li>
+      <li><a href="apidoc/smac.runhistory.runhistory.html#smac.runhistory.runhistory.DataOrigin.INTERNAL">INTERNAL (smac.runhistory.runhistory.DataOrigin attribute)</a>
 </li>
       <li><a href="apidoc/smac.stats.stats.html#smac.stats.stats.Stats.is_budget_exhausted">is_budget_exhausted() (smac.stats.stats.Stats method)</a>
 </li>
