--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -1134,6 +1134,16 @@
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="apidoc/smac.facade.roar_facade.html#smac.facade.roar_facade.ROAR.validate">validate() (smac.facade.roar_facade.ROAR method)</a>
+
+      <ul>
+        <li><a href="apidoc/smac.facade.smac_facade.html#smac.facade.smac_facade.SMAC.validate">(smac.facade.smac_facade.SMAC method)</a>
+</li>
+        <li><a href="apidoc/smac.optimizer.smbo.html#smac.optimizer.smbo.SMBO.validate">(smac.optimizer.smbo.SMBO method)</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.epm.base_epm.html#smac.epm.base_epm.AbstractEPM.var_threshold">var_threshold (smac.epm.base_epm.AbstractEPM attribute)</a>
 
       <ul>
