--- a/dev/_modules/smac/tae/execute_ta_run.html
+++ b/dev/_modules/smac/tae/execute_ta_run.html
@@ -431,11 +431,6 @@
                                                    <span class="bp">self</span><span class="o">.</span><span class="n">crash_cost</span><span class="p">))</span>
             <span class="n">status</span> <span class="o">=</span> <span class="n">StatusType</span><span class="o">.</span><span class="n">CRASHED</span>
 
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">stats</span><span class="o">.</span><span class="n">ta_runs</span> <span class="o">==</span> <span class="mi">1</span> <span class="ow">and</span> <span class="n">status</span> <span class="o">==</span> <span class="n">StatusType</span><span class="o">.</span><span class="n">CRASHED</span><span class="p">:</span>
-            <span class="k">raise</span> <span class="n">FirstRunCrashedException</span><span class="p">(</span><span class="s2">&quot;First run crashed, abort. (To &quot;</span>
-                                           <span class="s2">&quot;prevent this, toggle the &quot;</span>
-                                           <span class="s2">&quot;&#39;abort_on_first_run_crash&#39;&quot;</span>
-                                           <span class="s2">&quot;-option!)&quot;</span><span class="p">)</span>
         <span class="k">if</span> <span class="n">status</span> <span class="o">==</span> <span class="n">StatusType</span><span class="o">.</span><span class="n">ABORT</span><span class="p">:</span>
             <span class="k">raise</span> <span class="n">TAEAbortException</span><span class="p">(</span><span class="s2">&quot;Target algorithm status ABORT - SMAC will &quot;</span>
                                     <span class="s2">&quot;exit. The last incumbent can be found &quot;</span>
@@ -469,6 +464,15 @@
 
         <span class="k">if</span> <span class="n">status</span> <span class="o">==</span> <span class="n">StatusType</span><span class="o">.</span><span class="n">CAPPED</span><span class="p">:</span>
             <span class="k">raise</span> <span class="n">CappedRunException</span><span class="p">(</span><span class="s2">&quot;&quot;</span><span class="p">)</span>
+        
+        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">stats</span><span class="o">.</span><span class="n">ta_runs</span> <span class="o">==</span> <span class="mi">1</span> <span class="ow">and</span> <span class="n">status</span> <span class="o">==</span> <span class="n">StatusType</span><span class="o">.</span><span class="n">CRASHED</span><span class="p">:</span>
+            <span class="k">raise</span> <span class="n">FirstRunCrashedException</span><span class="p">(</span><span class="s2">&quot;First run crashed, abort. &quot;</span>
+                                           <span class="s2">&quot;Please check your setup -- &quot;</span>
+                                           <span class="s2">&quot;we assume that your default&quot;</span>
+                                           <span class="s2">&quot;configuration does not crashes. &quot;</span>
+                                           <span class="s2">&quot;(To deactivate this exception,&quot;</span> 
+                                           <span class="s2">&quot; use the SMAC scenario option &quot;</span>
+                                           <span class="s2">&quot;&#39;abort_on_first_run_crash&#39;)&quot;</span><span class="p">)</span>
 
         <span class="k">return</span> <span class="n">status</span><span class="p">,</span> <span class="n">cost</span><span class="p">,</span> <span class="n">runtime</span><span class="p">,</span> <span class="n">additional_info</span></div>
 
